--- a/aws-batch-job-monitor.template
+++ b/aws-batch-job-monitor.template
@@ -78,105 +78,8 @@ Resources:
             Timeout: 5
             Code:
                 ZipFile: |
-                    # -- coding: utf-8 --
-                    
-                    import json
-                    import boto3
-                    import logging
-                    logger = logging.getLogger()
-                    logger.setLevel(logging.INFO)
-                    
-                    batch_client = boto3.client('batch')
-                    cloudwatch_client = boto3.client('cloudwatch')
-                    
-                    STATUS_LIST = ['SUBMITTED', 'PENDING', 'RUNNABLE', 'STARTING', 'RUNNING', 'SUCCEEDED', 'FAILED']
-                    METRIC_NAME_MAPPING = {
-                        'SUBMITTED': 'Job Submitted',
-                        'PENDING': 'Job Pending',
-                        'RUNNABLE': 'Job Runnable',
-                        'STARTING': 'Job Starting',
-                        'RUNNING': 'Job Running',
-                        'SUCCEEDED': 'Job Succeeded',
-                        'FAILED': 'Job Failed'
-                    }
-                    
-                    def count_job_in_queue(queue_arn):
-                        job_counter = dict()
-                        array_job_counter = dict()
-                    
-                        # initialize result array
-                        for status in STATUS_LIST:
-                            array_job_counter[status] = 0
-                    
-                        for status in STATUS_LIST:
-                            response = batch_client.list_jobs(jobQueue=queue_arn, jobStatus=status)
-                            job_counter[status] = len(response['jobSummaryList'])
-                    
-                            for job in response['jobSummaryList']:
-                                # for Array Jobs
-                                if 'arrayProperties' in job:
-                                    job_detail = batch_client.describe_jobs(jobs=[job['jobId']])
-                                    for status in STATUS_LIST:
-                                        array_job_counter[status] += job_detail['jobs'][0]['arrayProperties']['statusSummary'][status]
-                                        
-                                # for Multi Node Jobs
-                                if 'nodeProperties':
-                                    # TODO
-                                    pass
-                    
-                        return job_counter, array_job_counter
-                            
-                    
-                    def put_metric_to_cloudwatch(metrics, namespace='BatchJobs'):
-                        metricdata = []
-                        
-                        for queue_name, counter in metrics.items():
-                            for status, job_count in counter['job_counter'].items():
-                                metricdata.append(
-                                    {
-                                        'MetricName': METRIC_NAME_MAPPING[status],
-                                        'Dimensions': [{'Name': 'QueueName', 'Value': queue_name}], 
-                                        'Unit': 'Count',
-                                        'Value': job_count
-                                    }
-                                )
-                    
-                            for status, job_count in counter['array_job_counter'].items():
-                                metricdata.append(
-                                    {
-                                        'MetricName': 'Array ' + METRIC_NAME_MAPPING[status],
-                                        'Dimensions': [{'Name': 'QueueName', 'Value': queue_name}], 
-                                        'Unit': 'Count',
-                                        'Value': job_count
-                                    }
-                                )
-                        
-                        logger.debug(metricdata)
-                        cloudwatch_client.put_metric_data(
-                            Namespace = namespace,
-                            MetricData = metricdata
-                        )
-                    
-                    
-                    def lambda_handler(event, context):
-                        metrics = dict()
-                    
-                        # count number of jobs in each status
-                        response = batch_client.describe_job_queues()
-                        for jobqueue in response['jobQueues']:
-                            job_counter, array_job_counter = count_job_in_queue(jobqueue['jobQueueArn'])
-                            metrics[jobqueue['jobQueueName']] = {'job_counter': job_counter, 'array_job_counter': array_job_counter}
-                    
-                        # put numbers to CloudWatch
-                        put_metric_to_cloudwatch(metrics)
-                    
-                        return {
-                            'statusCode': 200,
-                            'body': json.dumps('Succeeded')
-                        }
+##INCLUDE_LAMBDA##
 
-
-    
     BatchJobMonitorInvokeRule:
         Type: AWS::Events::Rule
         Properties:
